--- a/frontend/public/css/inicio.css
+++ b/frontend/public/css/inicio.css
@@ -35,6 +35,7 @@
     height: auto;
     position: relative;
     min-height: 80vh;
+    width: 80%;
 }
 
 .splide__track{
@@ -69,9 +70,10 @@
     }
     .tooltip{
         position: absolute;
-        background-color: #fff;
+        background-color: var(--color-secondary);
         top:20%;
         left: 5%;
+        max-width: 270px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -83,12 +85,12 @@
         transition: transform 0.4s ease-in-out;
         p{
             font-size: var(--size-sm);
-            color: var(--color-primary-light);
+            color: var(--color-secondary-light);
             margin-bottom: 0px;
         }
         a{
             font-size: var(--size-xs);
-            color: var(--color-primary);
+            color: var(--color-primary-light);
             margin-bottom: 0px;
         }
     }
@@ -341,19 +343,39 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    width: 100%;
+    img, picture {
+        width: auto;
+    }
 }
 
 .testimonio img{
-    width: 60px;
-    height: 60px;
-    border-radius: 60px;
-    background-color: #ccc;
+    width: auto;
+    height: 70px;
+    border-radius: 70px;
     margin-right: 14px;
+    border: 4px solid #ccc;
 }
 
-.testimonio span{
+.testimonio__nombres{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    padding-left: 20px;
+}
+
+.testimonio span:first-child{
     font-size: var(--size-sm);
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
+.testimonio span:last-child{
+    font-size: var(--size-xs);
+    font-weight: 400;
 }
 
 .testimonio:nth-child(2n+1){
