--- a/frontend/src/categoria-producto.njk
+++ b/frontend/src/categoria-producto.njk
@@ -5,7 +5,7 @@ eleventyComputed:
     keywords: "{{ categoriasProductos[0].keyseo }}"
 layout: base.njk
 pagination:
-  data: collections.uniqueCategories
+  data: collections.categorias
   size: 1
   alias: categoria
 permalink: "/productos/categorias/{{ categoria.slug.current }}/"
@@ -13,23 +13,89 @@ permalink: "/productos/categorias/{{ categoria.slug.current }}/"
 
 <div data-barba="container" data-barba-namespace="categoria-producto" data-css="productos">
 
-  <section>
+  <section id="section__hero" class="pad__lr__10 pad__bottom__5">
     <div class="column__1">
-      <h1>{{ categoria.title }}</h1>
+      <h1 class="identificador">Maltas marca {{ categoria.title }}</h1>
+    </div>
+    <div class="column__1 max1000">
+      {% if categoria.imgMarca %}
+      <img class="marca__logo" src="{{ categoria.imgMarca.url }}" alt="{{ categoria.imgMarca.alt }}">
+      {% endif %}
+      {{ categoria.description | safe }}
+    </div>
+    <div class="column__1 max1400">
+      <div class="marca__atributos">
+        <div class="atributo" style="{% for color in categoria.products %} background-color: {{color.categoriesColorLight[0].color}}; {% endfor %}">
+          <div class="atributo__icon">
+            <svg id="Icon1" data-name="Icon1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+              <path style="{% for color in categoria.products %} fill: {{color.categoriesColorDark[0].color}}; {% endfor %}"
+                d="M80.4,42.8c-1.3,0-2.6,0.4-3.6,1.3l-0.1-0.2c-1-2.8-3.7-4.7-6.7-4.6c-1.8-0.1-3.5,0.6-4.8,1.8
+                c0-0.1,0-0.1-0.1-0.2c-1.2-2.8-3.9-4.6-7-4.5c-1.6,0-3.1,0.4-4.4,1.3V18.5c0-1.4-0.3-2.9-0.9-4.2c-1.8-3.9-6.3-5.6-10.2-3.8
+                c-1.7,0.8-3,2.1-3.8,3.8c-0.6,1.3-0.9,2.8-0.9,4.2v39.1L31.1,50L31,49.9c-1.5-1.4-3.2-2.6-5-3.6c-4.1-2.1-7.8-1.7-10.4,0.9
+                c-5,5-0.9,12,2,15L39.7,87c0.1,0.1,0.2,0.2,0.4,0.3c3.9,2.4,7,2.8,11.8,2.8c1.2,0,2.4,0,3.8,0c1.8,0,3.8-0.1,6.1-0.1
+                c9.9,0,24.9,0,24.9-16.8V51.1C86.8,48.2,85.4,42.8,80.4,42.8z M83.2,73.3c0,12.2-9.3,13.2-21.4,13.2c-2.3,0-4.4,0-6.1,0.1
+                c-6.8,0.1-9.7,0.2-13.5-2.1L20.3,59.9l0,0c-0.1-0.1-5.9-6.2-2.1-10.1c3.7-3.7,9.9,2.2,10.4,2.7l9.9,11c0.5,0.6,1.3,0.8,2,0.5
+                c0.7-0.3,1.1-0.9,1.2-1.7V18.5c0-1,0.3-1.9,0.7-2.8c0.6-1.5,2.1-2.5,3.7-2.4c1.6-0.1,3.1,0.8,3.7,2.4c0.4,0.9,0.6,1.9,0.7,2.8v37
+                c0,1,0.8,1.8,1.8,1.8c1,0,1.8-0.8,1.8-1.8l0,0V45.2c0-0.5,0.2-5.2,4.4-5.2s4.4,4.7,4.4,5.2v10.6c0.1,1,0.9,1.7,1.9,1.6
+                c0.9-0.1,1.6-0.8,1.6-1.6v-7.6c0-0.5,0.2-5.2,4-5.2s4,4.7,4,5.2v7.7c0.1,1,0.9,1.7,1.9,1.6c0.9-0.1,1.6-0.8,1.6-1.6v-4.7
+                c0,0,0.1-4.7,2.8-4.7s2.8,4.7,2.8,4.7L83.2,73.3z"/>
+              </svg>
+              
+          </div>
+          <p>{{ categoria.attribute1 }}</p>
+        </div>
+        <div class="atributo" style="{% for color in categoria.products %} background-color: {{color.categoriesColorLight[0].color}}; {% endfor %}">
+          <div class="atributo__icon">
+            <svg id="Icon2" data-name="Icon2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+              <path style="{% for color in categoria.products %} fill: {{color.categoriesColorDark[0].color}}; {% endfor %}"
+              d="M98.19,49.32l-7.78-13A9.84,9.84,0,0,0,82,31.5H71.81V25.43A7.87,7.87,0,0,0,64,17.57H9.43a7.87,7.87,0,0,0-7.86,7.86V66a7.87,7.87,0,0,0,7.86,7.86h6.46a10.25,10.25,0,0,0,20.23,0H71.83a10.25,10.25,0,0,0,20.24-.12,7.68,7.68,0,0,0,6.36-7.55v-16A1.6,1.6,0,0,0,98.19,49.32ZM87.59,38l7,11.78H80.11v-15H82A6.55,6.55,0,0,1,87.59,38ZM26,79.15a7,7,0,1,1,7-7A7,7,0,0,1,26,79.15Zm0-17.24a10.26,10.26,0,0,0-10.12,8.65H9.43A4.58,4.58,0,0,1,4.86,66V25.43a4.58,4.58,0,0,1,4.57-4.58H64a4.58,4.58,0,0,1,4.57,4.58V66A4.58,4.58,0,0,1,64,70.56H36.13A10.27,10.27,0,0,0,26,61.91ZM81.94,79.15a7,7,0,1,1,7-7A7,7,0,0,1,81.94,79.15ZM92,70.35a10.25,10.25,0,0,0-20.21.21H70.33A7.8,7.8,0,0,0,71.81,66V34.78h5v16.6A1.64,1.64,0,0,0,78.47,53H95.14V66.17A4.38,4.38,0,0,1,92,70.35Z"/>
+              </svg>
+          </div>
+          <p>{{ categoria.attribute2 }}</p>
+        </div>
+        <div class="atributo" style="{% for color in categoria.products %} background-color: {{color.categoriesColorLight[0].color}}; {% endfor %}">
+          <div class="atributo__icon">
+            <svg id="Icon3" data-name="Icon3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+              <path style="{% for color in categoria.products %} fill: {{color.categoriesColorDark[0].color}}; {% endfor %}" d="M81.44,35.65A31.44,31.44,0,1,0,27.88,58V94a1.76,1.76,0,0,0,1,1.61,1.79,1.79,0,0,0,1.89-.28L50,78.54,69.2,95.36a1.74,1.74,0,0,0,1.16.43,1.83,1.83,0,0,0,.73-.15,1.76,1.76,0,0,0,1-1.61V58A31.31,31.31,0,0,0,81.44,35.65Zm-59.36,0A27.92,27.92,0,1,1,50,63.57,27.95,27.95,0,0,1,22.08,35.65ZM68.6,90.15,51.16,74.88a1.76,1.76,0,0,0-2.32,0L31.4,90.15V61a31.37,31.37,0,0,0,37.2,0Z"/>
+              <path style="{% for color in categoria.products %} fill: {{color.categoriesColorDark[0].color}}; {% endfor %}" d="M35,34.86l6.65,4.83-2.54,7.82a2.74,2.74,0,0,0,4.21,3.06L50,45.74l6.65,4.83a2.74,2.74,0,0,0,4.21-3.06l-2.54-7.82L65,34.86a2.74,2.74,0,0,0-1.61-4.95H55.14L52.6,22.1A2.72,2.72,0,0,0,50,20.2h0a2.72,2.72,0,0,0-2.6,1.9l-2.54,7.81H36.64A2.74,2.74,0,0,0,35,34.86Zm10.39-1.43A2.74,2.74,0,0,0,48,31.54l2-6.07,2,6.07a2.73,2.73,0,0,0,2.61,1.89H61l-5.16,3.75a2.73,2.73,0,0,0-1,3.06l2,6.07-5.16-3.75a2.71,2.71,0,0,0-3.22,0l-5.16,3.75,2-6.07a2.73,2.73,0,0,0-1-3.06l-5.16-3.75Z"/>
+            </svg>
+          </div>
+          <p>{{ categoria.attribute3 }}</p>
+        </div>
+        <div class="atributo" style="{% for color in categoria.products %} background-color: {{color.categoriesColorLight[0].color}}; {% endfor %}">
+          <div class="atributo__icon">
+            <svg id="Icon4" data-name="Icon4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+              <path style="{% for color in categoria.products %} fill: {{color.categoriesColorDark[0].color}}; {% endfor %}"
+              d="M89.28,66.76C88.4,51.63,77.36,39.57,69.13,31.82h0L69,31.73l-.13-.09-.08-.06-.12-.06-.07-.05-.06,0-.09,0-.13,0-.15,0-.07,0H68l-.16,0h-.06l-.15,0h-.15l-.07,0-.15,0-.13,0a.2.2,0,0,0-.08,0H67l-.07.05-.12.06-.08.06-.13.09-.1.08v0c-.85.8-1.74,1.7-2.81,2.83-8.34,8.81-16.95,19.44-17.6,31.48-.37,7,2,17,8.24,23.58a18.35,18.35,0,0,0,13.5,6.07h0a17.76,17.76,0,0,0,10-3.21C85.63,87.24,89.91,77.59,89.28,66.76ZM67.8,38c8.45,20,8.45,37.13,0,52.09C59.36,75.14,59.36,58,67.8,38ZM49.94,66.35c.47-8.74,5.88-16.93,12.1-24.13-6.43,18.4-5.75,34.89,2.05,49.18a15.14,15.14,0,0,1-7-4.35C51.69,81.33,49.6,72.53,49.94,66.35Zm25.7,23a14.87,14.87,0,0,1-4.1,2C79.38,77,80,60.33,73.42,41.78c5.92,6.77,11.42,15.35,12,25.21C86,76.44,82.3,84.81,75.64,89.38Z"/>
+              <path style="{% for color in categoria.products %} fill: {{color.categoriesColorDark[0].color}}; {% endfor %}" d="M28.94,4.21c-9,0-18.28,13.68-18.28,27.11,0,13.2,7.81,24,17.55,24.5a1,1,0,0,0,.17,0l.16,0,.4,0c10.08,0,18.28-11,18.28-24.53S38,4.21,28.94,4.21Zm5.61,46.13a21.85,21.85,0,0,0,2.39-6.59,1.94,1.94,0,1,0-3.8-.76c-1.23,6.11-4.09,8.31-5.09,8.91-7.53-.66-13.51-9.63-13.51-20.58a30.22,30.22,0,0,1,5-16.2c2.86-4.34,6.48-7,9.43-7a5.6,5.6,0,0,1,.9.09c4.73,6,6.6,17.67,4.54,28.77a1.93,1.93,0,0,0,1.55,2.26l.35,0a2,2,0,0,0,1.91-1.58A47.87,47.87,0,0,0,36.64,12.8a23.71,23.71,0,0,1,1.73,2.32,30.22,30.22,0,0,1,5,16.2C43.34,39.86,39.71,47.2,34.55,50.34Z"/>
+              </svg>
+          </div>
+          <p>{{ categoria.attribute4 }}</p>
+        </div>
+      </div>
+      <a class="btn" style="{% for color in categoria.products %} background-color: {{color.categoriesColorDark[0].color}}; {% endfor %}">Conoce nuestras maltas</a>
     </div>
   </section>
 
-  <section id="section__productos" class="pad__all__5">
-    <div class="column__1">
+  
+  <section id="section__productos__category" class="pad__tb__5 pad__lr__10" style="{% for color in categoria.products %} background-color: {{color.categoriesColorLight[0].color}}; {% endfor %}">
+  
+    <div class="column__1 max1400">
     
-    <p>{{ categoria.slug.current }}</p>
-    <ul role="list" class="listado__x3 width__100 hide__category">
-      {%- for item in categoria.products %}
-        {% include "producto-card.njk" %}
-      {%- endfor %}
-    </ul>
+      <ul role="list" class="listado__x3 width__100 hide__category">
+        {% for item in categoria.products %}
+          {% include "producto-card.njk" %}
+        {% endfor %}
+      </ul>
+
     </div>
+    
   </section>
+
+  {% include 'pre-footer.njk' %}
 
 </div>
 
+<script>
+  console.log("{{categoria.imgMarca}}")
+</script>
