--- a/frontend/src/categoria-articulo.njk
+++ b/frontend/src/categoria-articulo.njk
@@ -8,7 +8,7 @@ pagination:
   data: collections.categoriasBlog
   size: 1
   alias: categoriaPost
-permalink: "/articulos/categorias/{{ categoriaPost.slug }}/index.html"
+permalink: "/articulos/categorias/{{ categoriaPost.slug.current }}/index.html"
 ---
 
 <div data-barba="container" data-barba-namespace="categoria-articulo" data-css="articulos">
@@ -22,11 +22,11 @@ permalink: "/articulos/categorias/{{ categoriaPost.slug }}/index.html"
 
   <section id="section__articulos" class="pad__all__5">
     <div class="column__1">
-    <ul role="list" class="listado__x3 width__100 hide__category">
-      {% for item in categoriaPost.post %}
-        {% include "post-card.njk" %}
-      {% endfor %}
-    </ul>
+      <ul role="list" class="listado__x3 width__100 hide__category">
+        {% for item in categoriaPost.post %}
+          {% include "post-card.njk" %}
+        {% endfor %}
+      </ul>
     </div>
   </section>
   
