--- a/frontend/src/css/nosotros.css
+++ b/frontend/src/css/nosotros.css
@@ -34,10 +34,10 @@
 
     .grano1{
         position: absolute;
-        width: 6vw;
+        width: 4vw;
         min-width: 50px;
         height: auto;
-        bottom: 20%;
+        top: 30%;
         left: 5%;
         z-index: 2;
         
@@ -57,11 +57,11 @@
 
     .grano2{
         position: absolute;
-        width: 6vw;
+        width: 4vw;
         min-width: 50px;
         height: auto;
-        top: 10%;
-        right: 6%;
+        top: 5%;
+        right: 14%;
         z-index: 2;
     }
 
@@ -76,6 +76,29 @@
         animation-timing-function: linear;
         animation-iteration-count: infinite;
         animation-direction: alternate-reverse;
+    }
+
+    .grano3{
+        position: absolute;
+        width: 4vw;
+        min-width: 50px;
+        height: auto;
+        bottom: 0%;
+        left: 25%;
+        z-index: 2;
+        
+    }
+
+    .grano3 img{
+        width: 100%;
+        height: 100%;
+        position: relative;
+        object-fit: contain;
+        filter: drop-shadow(2px 65px 15px rgba(0,0,0,0.3));
+        animation-name: rotaGrano;
+        animation-duration: 20s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
     }
 
     
