--- a/frontend/src/css/productos.css
+++ b/frontend/src/css/productos.css
@@ -7,8 +7,8 @@
 }
 
 #section__hero{
-    background-color: var(--color-secondary-light);
     padding-top: calc(60px + 3%);
+    padding-bottom: 2%;
     h1{
         color: var(--color-secondary);
     }
@@ -31,7 +31,7 @@
     }
 
     .btn{
-        margin-top: 5%;
+        margin-top: 20px;
     }
 }
 
@@ -84,4 +84,33 @@
 
 .atributo:last-child{
     border-radius: 0px 20px 20px 0px;
+}
+
+#section__intro{
+    background-color: var(--color-secondary-dark);
+}
+
+#listado__marcas{
+    margin-top: 5%;
+}
+
+.logo__category{
+    padding: 5%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    border-radius: 30px;
+    margin-bottom: 0px;
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+}
+
+.logo__category a:first-child{
+    max-width: 400px;
+}
+
+#listado__maltas{
+    margin-top: 5%;
 }
