--- a/frontend/src/_includes/footer.njk
+++ b/frontend/src/_includes/footer.njk
@@ -6,11 +6,13 @@
         </div>
         <div class="footer__column">
             <h2>Datos de contacto</h2>
-            {% for item in empresa %}
-                <li>T: <a class="tel__text" href="tel:+521{{ item.brandPhone }}">{{ item.brandPhone }}</a></li>
-                <li>C: <a href="mailto:{{ item.brandEmail }}">{{ item.brandEmail }}</a></li>
-                <li><a href="{{ item.brandAddressUrl }}" target="_blank">{{ item.brandAddress }}</a></li>
-            {% endfor %}
+            <ul>
+                {% for item in empresa %}
+                    <li>T: <a class="tel__text" href="tel:+521{{ item.brandPhone }}">{{ item.brandPhone }}</a></li>
+                    <li>C: <a href="mailto:{{ item.brandEmail }}">{{ item.brandEmail }}</a></li>
+                    {% if item.brandAddress %}<li><a href="{{ item.brandAddressUrl }}" target="_blank">{{ item.brandAddress }}</a></li>{% endif %}
+                {% endfor %}
+            </ul>
         </div>
         <div class="footer__column">
             <h2>Síguenos</h2>
@@ -18,6 +20,7 @@
             {% for item in social %}
                 <li><a href="{{ item.facebook }}" target="_blank">Facebook</a></li>
                 <li><a href="{{ item.instagram }}" target="_blank">Instagram</a></li>
+                <li><a href="{{ item.linkedin }}" target="_blank">LinkedIn</a></li>
             {% endfor %}
             </ul>
         </div>
