--- a/frontend/src/_includes/header.njk
+++ b/frontend/src/_includes/header.njk
@@ -18,7 +18,7 @@
     
     <div id="mobile__menu">
         {% include 'main-nav.njk' %}
-        <a class="cta__msn" href="https://wa.me/521{{ marca.brandPhone }}" target="_blank">Mensaje</a>
+        <a class="cta__msn" href="https://wa.me/521{{ marca.brandWhats }}" target="_blank">Mensaje</a>
     </div>
     <div id="mobile__active"></div>
     {% endfor %}
