--- a/frontend/public/css/general/nav.css
+++ b/frontend/public/css/general/nav.css
@@ -230,7 +230,7 @@ header{
 @media only screen and (max-width: 1200px) {
 
     #logo__main img{
-        height: 30px;
+        height: 44px;
     }
 
     #inner__header > .nav__ul li a{
@@ -247,6 +247,10 @@ header{
 
 /*  Tableta  */
 @media only screen and (max-width: 1024px) {
+
+    #inner__header{
+        padding: 5px 0px;
+    }
 
     #inner__header > .nav__ul{
         display: none;
