--- a/frontend/src/categoria-articulo.njk
+++ b/frontend/src/categoria-articulo.njk
@@ -23,7 +23,7 @@ permalink: "/articulos/categorias/{{ categoriaPost.slug.current }}/index.html"
   <section id="section__articulos" class="pad__all__5">
     <div class="column__1">
       <ul role="list" class="listado__x3 width__100 hide__category">
-        {% for item in categoriaPost.post %}
+        {% for item in categoriaPost %}
           {% include "post-card.njk" %}
         {% endfor %}
       </ul>
@@ -32,3 +32,4 @@ permalink: "/articulos/categorias/{{ categoriaPost.slug.current }}/index.html"
   
 
 </div>
+
