--- a/frontend/public/css/inicio.css
+++ b/frontend/public/css/inicio.css
@@ -451,8 +451,6 @@
         left: unset !important;
         bottom: 100px;
     }
-    
-    
 
     #section__intro {
         .col__left {
@@ -488,6 +486,78 @@
                 margin-top: 30px;
                 align-items: center;
             }
+        }
+    }
+
+    .testimonio{
+        padding: 20px;
+        border-radius: 20px;
+        min-width: 430px;
+    }
+
+}
+
+
+
+
+
+
+
+/*  Móvil  */
+@media only screen and (max-width: 768px) {
+
+    .splide__slide{
+        .tooltip{
+            padding: 10px;
+            bottom: 65px;
+        }
+    }
+
+    .splide__arrows{
+        height: 40px;
+        width: 90px;
+        right: calc(50% - 45px);
+        bottom: 10px;
+    }
+
+    .splide__arrow{
+        width: 40px;
+        height: 40px;
+        top: 0;
+    }
+
+    #section__productos.pad__tb__5{
+        padding-top: 15%;
+        padding-bottom: 15%;
+    }
+
+    #section__productos.pad__lr__10{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    .card {
+        & .card__title {
+            font-size: var(--size-xl);
+        }
+    }
+
+    .testimonio{
+        top: -25px;
+        min-width: 320px;
+    }
+
+    .testimonio:nth-child(2n+1){
+        bottom: -25px;
+    }
+
+    .testimonio img{
+        height: 55px;
+    }
+
+    #section__testimonios {
+        .draggable {
+            gap: 50px;
         }
     }
 
