--- a/frontend/public/css/productos.css
+++ b/frontend/public/css/productos.css
@@ -111,6 +111,12 @@
     max-width: 400px;
 }
 
+.marca__btn img{
+    width: 100%;
+    height: 100%;
+    min-width: 300px;
+}
+
 #listado__maltas{
     margin-top: 5%;
 }
@@ -140,4 +146,104 @@
     font-size: var(--size-lg);
     text-align: center;
     margin-bottom: 5%;
+}
+
+
+
+
+
+
+
+
+/*  Tableta  */
+@media only screen and (max-width: 1024px) {
+
+    #section__hero{
+        padding: calc(60px + 5%) 5% 5%;
+    }
+
+    .marca__btn img{
+        min-width: 220px;
+    }
+
+    .atributo{
+        .atributo__icon{
+            width: 70px;
+            height: 70px;
+            padding: 14px;
+        }
+    }
+
+}
+
+
+
+
+
+
+
+/*  Móvil  */
+@media only screen and (max-width: 768px) {
+
+    #section__hero {
+        padding: calc(60px + 10%) 5% 8%;
+    }
+
+    #section__catalogo.pad__lr__10{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #section__catalogo.pad__tb__5{
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+
+    #listado__maltas{
+        margin-top: 10%;
+    }
+
+    #section__hero {
+        .marca__logo {
+            max-width: 300px;
+        }
+    }
+    
+    .marca__atributos{
+        flex-direction: column;
+        margin-top: 5%;
+        .atributo{
+            width: 100%;
+            flex-direction: row;
+            padding: 15px;
+            p{
+                margin-left: 10px;
+            }
+            .atributo__icon{
+                width: 60px;
+                height: 60px;
+                margin-top: 0px;
+                margin-bottom: 0px;
+            }
+        }
+    }
+
+    .atributo:first-child {
+        border-radius: 20px 20px 0px 0px;
+    }
+
+    .atributo:last-child {
+        border-radius: 0px 0px 20px 20px;
+    }
+
+    #section__productos__category.pad__lr__10{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #section__productos__category.pad__tb__5{
+        padding-top: 12%;
+        padding-bottom: 12%;
+    }
+
 }
