--- a/frontend/src/css/producto.css
+++ b/frontend/src/css/producto.css
@@ -9,7 +9,6 @@
 
 
 #section__hero{
-    background-color: var(--color-secondary-white);
     padding-top: calc(60px + 3%);
 
     .col__left{
@@ -192,3 +191,87 @@ h1{
 
 
 
+
+
+
+
+/*  Tableta  */
+@media only screen and (max-width: 1024px) {
+
+    #section__hero{
+        padding-top: calc(60px + 5%);
+    }
+
+    #section__hero{
+        .col__left{
+            .splide__bg{
+                bottom: 10%;
+            }
+        }
+        .col__right{
+            padding-top: 8%;
+            padding-left: 0%;
+        }
+    }
+
+    #section__body{
+        .column__2{
+            .col__left{
+                padding-right: 0%;
+                padding-bottom: 5%;
+            }
+        }
+    }
+
+    #section__body.pad__tb__5{
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+
+    #section__productos.pad__tb__5{
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+
+}
+
+
+
+
+
+
+
+/*  Móvil  */
+@media only screen and (max-width: 768px) {
+
+    #section__hero{
+        .column__2{
+            .col__left{
+                padding-left: 5%;
+                padding-right: 0px;
+            }
+        }
+        .splide__arrows{
+            left: -5%;
+            width: 40px;
+        }
+        .splide__arrow{
+            width: 40px;
+            height: 40px;
+        }
+        .splide__arrow--next{
+            right: 0px;
+        }
+    }
+
+    #section__productos.pad__lr__10{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #section__productos.pad__tb__5{
+        padding-left: 12%;
+        padding-right: 12%;
+    }
+
+}
