--- a/frontend/src/css/articulo.css
+++ b/frontend/src/css/articulo.css
@@ -121,3 +121,54 @@ h1{
         }
     }
 }
+
+
+
+
+
+
+
+
+/*  Tableta  */
+@media only screen and (max-width: 1024px){
+
+    #section__hero{
+        .column__2{
+            .col__left{
+                width: 100%;
+                padding-right: 0;
+                img{
+                    border-radius: 20px;
+                }
+            }
+
+            .col__right{
+                width: 100%;
+                padding-left: 0;
+            }
+        }
+        
+    }
+
+    .body__article img{
+        max-width: unset;
+    }
+
+}
+
+
+
+
+
+/*  Móvil  */
+@media only screen and (max-width: 768px) {
+
+    #section__hero{
+        .column__2{
+            .col__right{
+                padding-bottom: 8%;
+            }
+        }
+    }
+
+}
