--- a/frontend/src/css/aviso.css
+++ b/frontend/src/css/aviso.css
@@ -1,4 +1,5 @@
 #section__aviso{
+    padding-top: calc(60px + 5%);
     .column__1{
         align-items: center;
     }
@@ -17,4 +18,45 @@
     p{
         font-size: 22px;
     }
+}
+
+
+
+
+
+
+
+/*  Tableta  */
+@media only screen and (max-width: 1024px) {
+
+    #section__aviso{
+        padding-top: calc(60px + 10%);
+        h2{
+            font-size: 24px;
+        }
+        p{
+            font-size: 14px !important;
+        }
+    }
+
+}
+
+
+
+
+
+
+
+/*  Móvil  */
+@media only screen and (max-width: 768px) {
+
+    #section__aviso{
+        h2{
+            font-size: 20px;
+        }
+        p{
+            font-size: 14px !important;
+        }
+    }
+
 }
