--- a/frontend/src/index.njk
+++ b/frontend/src/index.njk
@@ -131,7 +131,7 @@ permalink: "/{{ page.fileSlug }}/"
                     {% include "producto-card.njk" %}
                 {% endfor %}
             </ul>
-            <a class="btn arrow__right mar__top__5">Ver catálogo completo</a>
+            <a href="/productos/" class="btn arrow__right mar__top__5">Ver catálogo completo</a>
         </div>
     </section>
 
