--- a/frontend/src/articulo.njk
+++ b/frontend/src/articulo.njk
@@ -1,8 +1,8 @@
 ---
 eleventyComputed:
-    title: "{{ posts[0].titleseo }}"
-    description: "{{ posts[0].descseo }}"
-    keywords: "{{ posts[0].keyseo }}"
+    title: "{{ articulo.titleseo }}"
+    description: "{{ articulo.descseo }}"
+    keywords: "{{ articulo.keyseo }}"
 layout: base.njk
 pagination:
   data: collections.articulos
