--- a/frontend/src/categoria-producto.njk
+++ b/frontend/src/categoria-producto.njk
@@ -1,8 +1,8 @@
 ---
 eleventyComputed:
-    title: "{{ categoriasProductos[0].titleseo }}"
-    description: "{{ categoriasProductos[0].descseo }}"
-    keywords: "{{ categoriasProductos[0].keyseo }}"
+    title: "{{ categoria.titleseo }}"
+    description: "{{ categoria.descseo }}"
+    keywords: "{{ categoria.keyseo }}"
 layout: base.njk
 pagination:
   data: collections.categorias
