--- a/frontend/src/producto.njk
+++ b/frontend/src/producto.njk
@@ -1,8 +1,8 @@
 ---
 eleventyComputed:
-    title: "{{ products[0].titleseo }}"
-    description: "{{ productos[0].descseo }}"
-    keywords: "{{ productos[0].keyseo }}"
+    title: "{{ producto.titleseo }}"
+    description: "{{ producto.descseo }}"
+    keywords: "{{ producto.keyseo }}"
 layout: base.njk
 pagination:
   data: collections.productos
